--- a/confs/genhalf_linear.yml
+++ b/confs/genhalf_linear.yml
@@ -80,7 +80,7 @@ data:
       batch_size: 1 # batch size
       return_dataloader: true
       offset: 0
-      max_len: 8
+      max_len: 8 # max dataloader length
       paths: # output path
         srs: ./log/genhalf_linear/inpainted 
         lrs: ./log/genhalf_linear/gt_masked
