--- a/confs/celeba_ex64_cosine.yml
+++ b/confs/celeba_ex64_cosine.yml
@@ -53,7 +53,7 @@ latex_name: RePaint
 method_name: Repaint
 image_size: 256
 model_path: ./data/pretrained/celeba256_250000.pt
-name: genhalf_default # task name
+name: ex64_cosine # task name
 inpa_inj_sched_prev: true
 n_jobs: 1
 print_estimated_vars: true
@@ -63,13 +63,13 @@ schedule_jump_params:
   n_sample: 1
   jump_length: 10
   jump_n_sample: 10
-  resampling_scheduler: default # resampling scheduler
+  resampling_scheduler: cosine # resampling scheduler
 data:
   eval:
     paper_face_mask:
       mask_loader: true
-      gt_path: ./data/datasets/gts/test
-      mask_path: ./data/datasets/gt_keep_masks/genhalf
+      gt_path: ./data/datasets/gts/test # gt path
+      mask_path: ./data/datasets/gt_keep_masks/ex64 # mask path
       image_size: 256
       class_cond: false
       deterministic: true
@@ -77,12 +77,12 @@ data:
       random_flip: false
       return_dict: true
       drop_last: false
-      batch_size: 1 # batch size
+      batch_size: 8 # batch size
       return_dataloader: true
       offset: 0
       max_len: 8 # max dataloader length
       paths: # output path
-        srs: ./log/genhalf_default/inpainted 
-        lrs: ./log/genhalf_default/gt_masked
-        gts: ./log/genhalf_default/gt
-        gt_keep_masks: ./log/genhalf_default/gt_keep_mask
+        srs: ./log/ex64_cosine/inpainted 
+        lrs: ./log/ex64_cosine/gt_masked
+        gts: ./log/ex64_cosine/gt
+        gt_keep_masks: ./log/ex64_cosine/gt_keep_mask
